--- a/sdk-bsp-nk-980iot.yaml
+++ b/sdk-bsp-nk-980iot.yaml
@@ -17,7 +17,7 @@ board:
   sale_contact_cn: https://www.nuvoton.com
   sale_contact_global: https://www.nuvoton.com
   small_image: documents/images/small.png
-  vendor: Nuvoton technology corporation
+  vendor: Nuvoton
   version: v1.0
 chip:
   chip_name: NUC980DK61Y
@@ -82,15 +82,13 @@ template_projects:
     - board
     - uboot
     - packages
-    - README.md
-    - cconfig.h
     - rtconfig.h
     - SConscript
     - libraries
     - rt-thread
     - rtconfig.py
     - template.uvproj
-    source_path_offset: 
+    source_path_offset: ''
     target_path_offset: ''
   external_files:
   - package_type: ToolChain_Support_Packages
